# concurrency-primitives

./: .gitignore  CMakeLists.txt  README.md
include/: includeHelper.hpp  spinlockC11.hpp
include/primitives/: SpinlockCPP20.hpp  spinlockCPP11.hpp
include/tests/: TestRunner.hpp
scripts/: build.bash
src/: main.cpp
tests/: test_TestRunner.cpp  test_spinlockCPP11.cpp  test_spinlockCPP20.cpp
